Fix the misaligned delete button

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -162,6 +162,9 @@ body {
 
 .class-delete-button {
     margin-left: 10px;
+}
+
+.del-button-div {
     vertical-align: top;
 }
 
